sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: type mismatch;
 found   : Double
 required: Int
	if(getValeur(i)>getValeur(i+ecart)){echange(i,i+ecart); f = false}
                     ^AlgCombSort:10: error: type mismatch;
 found   : Double
 required: Int
	if(getValeur(i)>getValeur(i+ecart)){echange(i,i+ecart); f = false}
                                                    ^