sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {

var ecart:Double = getNombreValeurs
while(ecart > 1){

var i:Double = 0
var f = true
while(i + ecart < getNombreValeurs){
	if(getValeur(i)>getValeur(i+ecart)){echange(i,i+ecart); f = false}
	i += 1
}
if(f == true){return()}
	ecart = ecart/1.3
	
}

}
